# telegram-mastodon-bridge

./: pyproject.toml  requirements.txt
